==> KunYi/STM32H750NetLite/软件发布/SPI一读写串行FLASH/User/spiflash/bsp_spi_flash.c <==
#include "./spiflash/bsp_spi_flash.h"
#include "string.h"

uint32_t SPI_FLASH_ReadID(void)
{
	uint32_t tmp;
	memset(txbuf,0,4);
	txbuf[0] = W25X_JedecDeviceID;
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,4,2000);
	tmp = rxbuf[1];
	tmp <<= 8;
	tmp |= rxbuf[2];
	tmp <<= 8;
	tmp |= rxbuf[3];

  return tmp;
}

void SPI_FLASH_WriteEnable(void)
{
	txbuf[0] = W25X_WriteEnable;
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,1,2000);	
}

void SPI_FLASH_WaitForWriteEnd(void)
{
  uint8_t FLASH_Status = 0;

	SPITimeout = SPIT_LONG_TIMEOUT;
	memset(txbuf,0,2);
	txbuf[0]= W25X_ReadStatusReg;
	do
	{
		HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,2,2000);	
		FLASH_Status = rxbuf[1];
		if((SPITimeout--) == 0) 
		{
			SPI_TIMEOUT_UserCallback(4);
			return;
		}
	}while ((FLASH_Status & WIP_Flag) == SET); /* 正在写入标志 */
	
}

void SPI_FLASH_SectorErase(uint32_t SectorAddr)
{
	memset(txbuf,0,4);
	txbuf[0]= W25X_SectorErase;
	
  /* 发送FLASH写使能命令 */
  SPI_FLASH_WriteEnable();
  SPI_FLASH_WaitForWriteEnd();
	
	txbuf[1] = SectorAddr>>16;
	txbuf[2] = SectorAddr>>8;
	txbuf[3] = SectorAddr;
  /* 擦除扇区 */
  HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,4,2000);	
  /* 等待擦除完毕*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(uint8_t* pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{
	uint8_t rxbuf[SPI_FLASH_PerWritePageSize];
  /* 发送FLASH写使能命令 */
  SPI_FLASH_WriteEnable();
	txbuf[0]= W25X_PageProgram;
	txbuf[1] = WriteAddr>>16;
	txbuf[2] = WriteAddr>>8;
	txbuf[3] = WriteAddr;
	
	memcpy(txbuf+4,pBuffer,NumByteToWrite);
  
  if(NumByteToWrite > SPI_FLASH_PerWritePageSize)
  {
     NumByteToWrite = SPI_FLASH_PerWritePageSize;
     FLASH_ERROR("SPI_FLASH_PageWrite too large!");
  }
	/* 写入数据*/
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,NumByteToWrite+4,2000);	
  
  /* 等待写入完毕*/
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(uint8_t* pBuffer, uint32_t ReadAddr, uint16_t NumByteToRead)
{
	memset(txbuf,0,NumByteToRead+4);
	txbuf[0] = W25X_ReadData;
	txbuf[1] = ReadAddr>>16;
	txbuf[2] = ReadAddr>>8;
	txbuf[3] = ReadAddr;
  	
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,NumByteToRead+4,2000);	  
	memcpy(pBuffer,rxbuf+4,NumByteToRead);
}

void SPI_Flash_PowerDown(void)   
{ 
	txbuf[0] = W25X_PowerDown;
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,1,2000);	  
}

void SPI_Flash_WAKEUP(void)   
{
	txbuf[0] = W25X_ReleasePowerDown;
	HAL_SPI_TransmitReceive(&hspi1,txbuf,rxbuf,1,2000);	  
}
