==> WuJiayi6/Keil_Code/08_2 ADC采集实验(多通道_基于ADXL335)/HARDWARE/flash/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"

void SPI_FLASH_SectorErase(u32 SectorAddr)
{
	/* 发送FLASH写使能命令 */
	SPI_FLASH_WriteEnable();
	SPI_FLASH_WaitForWriteEnd();
	/* 擦除扇区 */
	/* 选择FLASH: CS低电平 */
	 GPIO_ResetBits( GPIOC, GPIO_Pin_0 );
	/* 发送扇区擦除指令*/
	SPI_FLASH_SendByte(0x20);
	/*发送擦除扇区地址的高位*/
	SPI_FLASH_SendByte((SectorAddr & 0xFF0000) >> 16);
	/* 发送擦除扇区地址的中位 */
	SPI_FLASH_SendByte((SectorAddr & 0xFF00) >> 8);
	/* 发送擦除扇区地址的低位 */
	SPI_FLASH_SendByte(SectorAddr & 0xFF);
	/* 停止信号 FLASH: CS 高电平 */
	 GPIO_SetBits( GPIOC, GPIO_Pin_0 );
	/* 等待擦除完毕*/
	SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(u8* pBuffer, u32 WriteAddr, u16 NumByteToWrite)
{
	/* 发送FLASH写使能命令 */
	SPI_FLASH_WriteEnable();

	/* 选择FLASH: CS低电平 */
	 GPIO_ResetBits( GPIOC, GPIO_Pin_0 );
	/* 写页写指令*/
	SPI_FLASH_SendByte(0x02);
	/*发送写地址的高位*/
	SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
	/*发送写地址的中位*/
	SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
	/*发送写地址的低位*/
	SPI_FLASH_SendByte(WriteAddr & 0xFF);

	if(NumByteToWrite > 256)
	{
		 NumByteToWrite = 256;
		 FLASH_ERROR("SPI_FLASH_PageWrite too large!"); 
	}

	/* 写入数据*/
	while (NumByteToWrite--)
	{
		/* 发送当前要写入的字节数据 */
		SPI_FLASH_SendByte(*pBuffer);
		/* 指向下一字节数据 */
		pBuffer++;
	}

	/* 停止信号 FLASH: CS 高电平 */
	 GPIO_SetBits( GPIOC, GPIO_Pin_0 );

	/* 等待写入完毕*/
	SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(u8* pBuffer, u32 ReadAddr, u16 NumByteToRead)
{
	/* 选择FLASH: CS低电平 */
	 GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

	/* 发送 读 指令 */
	SPI_FLASH_SendByte(0x03);

	/* 发送 读 地址高位 */
	SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
	/* 发送 读 地址中位 */
	SPI_FLASH_SendByte((ReadAddr& 0xFF00) >> 8);
	/* 发送 读 地址低位 */
	SPI_FLASH_SendByte(ReadAddr & 0xFF);

	/* 读取数据 */
	while (NumByteToRead--) /* while there is data to be read */
	{
		/* 读取一个字节*/
		*pBuffer = SPI_FLASH_SendByte(0xFF);
		/* 指向下一个字节缓冲区 */
		pBuffer++;
	}

	/* 停止信号 FLASH: CS 高电平 */
	 GPIO_SetBits( GPIOC, GPIO_Pin_0 );
}

u32 SPI_FLASH_ReadID(void)
{
	u32 Temp = 0, Temp0 = 0, Temp1 = 0, Temp2 = 0;

	/* 开始通讯：CS低电平 */
	GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

	/* 发送JEDEC指令，读取ID */
	SPI_FLASH_SendByte(0x9F);

	/* 读取一个字节数据 */
	Temp0 = SPI_FLASH_SendByte(0xFF);

	/* 读取一个字节数据 */
	Temp1 = SPI_FLASH_SendByte(0xFF);

	/* 读取一个字节数据 */
	Temp2 = SPI_FLASH_SendByte(0xFF);

	/* 停止通讯：CS高电平 */
	GPIO_SetBits( GPIOC, GPIO_Pin_0 );

	/*把数据组合起来，作为函数的返回值*/
	Temp = (Temp0 << 16) | (Temp1 << 8) | Temp2;

	return Temp;
}

void SPI_FLASH_WriteEnable(void)
{
  /* 通讯开始：CS低 */
   GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

  /* 发送写使能命令*/
  SPI_FLASH_SendByte(0x06);

  /*通讯结束：CS高 */
  GPIO_SetBits( GPIOC, GPIO_Pin_0);
}

void SPI_FLASH_WaitForWriteEnd(void)
{
  u8 FLASH_Status = 0;

  /* 选择 FLASH: CS 低 */
   GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

  /* 发送 读状态寄存器 命令 */
  SPI_FLASH_SendByte(0x05);

  /* 若FLASH忙碌，则等待 */
  do
  {
		/* 读取FLASH芯片的状态寄存器 */
    FLASH_Status = SPI_FLASH_SendByte(0xFF);	 
  }
  while ((FLASH_Status & 0x01) == SET);  /* 正在写入标志 */

  /* 停止信号  FLASH: CS 高 */
  GPIO_SetBits( GPIOC, GPIO_Pin_0);
}

void SPI_Flash_PowerDown(void)   
{ 
  /* 通讯开始：CS低 */
   GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

  /* 发送 掉电 命令 */
  SPI_FLASH_SendByte(0xB9);

  /*通讯结束：CS高 */
  GPIO_SetBits( GPIOC, GPIO_Pin_0);
}

void SPI_Flash_WAKEUP(void)   
{
  /*选择 FLASH: CS 低 */
  GPIO_ResetBits( GPIOC, GPIO_Pin_0 );

  /* 发送 上电 命令 */
  SPI_FLASH_SendByte(0xAB);

   /* 停止信号 FLASH: CS 高 */
  GPIO_SetBits( GPIOC, GPIO_Pin_0);
}
